k8s/aws/webapp-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learn-k8s-webapp-service
  namespace: learn-k8s-webapp
spec:
  type: NodePort
  selector:
    app: learn-k8s-webapp
  ports:
    - port: 80
      targetPort: webappport
      protocol: TCP
