k8s/aws/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learn-k8s-webapp-ingress
  namespace: learn-k8s-webapp
  labels:
    app: learn-k8s-webapp
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: learn-k8s-webapp-service
              port:
                number: 80
